Seçenekler kısmı hazırlandı.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -7,7 +7,7 @@
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
   },
-  "default_locale": "en",
+  "default_locale": "tr",
   "background": {
     "scripts": [
       "bower_components/jquery/dist/jquery.min.js",
@@ -20,7 +20,6 @@
     "tabs",
     "http://*/*",
     "https://*/*",
-    "background",
     "contentSettings",
     "cookies",
     "*://*.google.com/",
@@ -50,7 +49,7 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "sukelamatik",
+    "default_title": "__MSG_appName__ - __MSG_appDescription__",
     "default_popup": "popup.html"
   },
   "web_accessible_resources": [
